do some debug because of command not found

--- a/.github/workflows/build-push-deploy.yml
+++ b/.github/workflows/build-push-deploy.yml
@@ -67,9 +67,13 @@ jobs:
 
       - name: Test with Maven
         run: |
+          echo "first"
           echo ${{ secrets.KUBECONFIG }} > kubeconfig
+          echo "second"
           export NODE_PORT=$(kubectl --kubeconfig=kubeconfig get --namespace mycv-test -o jsonpath="{.spec.ports[0].nodePort}" services mycv)
+          echo "third"
           export NODE_IP=$(kubectl --kubeconfig=kubeconfig get nodes --namespace mycv-test -o jsonpath="{.items[0].status.addresses[1].address}")
+          echo "fourth"
           mvn -B verify -DBASE_URI=$NODE_PORT:$NODE_IP --file pom.xml
 
       - name: Deploy to Prod Namespace Kubernetes
