--- a/.github/workflows/build-push-deploy.yml
+++ b/.github/workflows/build-push-deploy.yml
@@ -62,15 +62,15 @@ jobs:
         with:
           exec: |
             helm dependency update helm/mycv
-            helm upgrade --install --wait --debug --set githubActionRun=https://github.com/$GITHUB_REPOSITORY/actions/runs/$GITHUB_RUN_ID -n mycv-test mycv helm/mycv
+            helm upgrade --install --wait --debug --set githubActionRun=https://github.com/$GITHUB_REPOSITORY/actions/runs/$GITHUB_RUN_ID,service.nodePort=33000 -n mycv-test mycv helm/mycv
           kubeconfig: '${{ secrets.KUBECONFIG }}'
 
       - name: Test with Maven
         run: |
           echo "${{ secrets.KUBECONFIG }}" > kubeconfig
+          export NODE_IP=$(kubectl --kubeconfig=kubeconfig get nodes --namespace mycv-test -o jsonpath="{.items[0].status.addresses[2].address}")
           export NODE_PORT=$(kubectl --kubeconfig=kubeconfig get --namespace mycv-test -o jsonpath="{.spec.ports[0].nodePort}" services mycv)
-          export NODE_IP=$(kubectl --kubeconfig=kubeconfig get nodes --namespace mycv-test -o jsonpath="{.items[0].status.addresses[1].address}")
-          mvn -B verify -DBASE_URI=$NODE_IP:$NODE_PORT --file pom.xml
+          mvn -B verify -DBASE_URI=http://$NODE_IP:$NODE_PORT --file pom.xml
 
       - name: Deploy to Prod Namespace Kubernetes
         uses: WyriHaximus/github-action-helm3@v1.0.0
