provision a kubernetes cluster in digital ocean, create namespaces and registry credentials with terraform

--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,9 @@ pom.xml.tag
 pom.xml.releaseBackup
 pom.xml.versionsBackup
 release.properties
+
+# Terraform
+.terraform/
+terraform/kubeconfig
+*.tfstate*
+
