--- a/.github/workflows/build-push-deploy.yml
+++ b/.github/workflows/build-push-deploy.yml
@@ -62,7 +62,7 @@ jobs:
         with:
           exec: |
             helm dependency update helm/mycv
-            helm upgrade --install --atomic --debug --set githubActionRun=jacoco.enabled=true,https://github.com/$GITHUB_REPOSITORY/actions/runs/$GITHUB_RUN_ID,service.nodePort=31999 -n mycv-test mycv helm/mycv
+            helm upgrade --install --atomic --debug --set jacoco.enabled=true,githubActionRun=https://github.com/$GITHUB_REPOSITORY/actions/runs/$GITHUB_RUN_ID,service.nodePort=31999 -n mycv-test mycv helm/mycv
           kubeconfig: '${{ secrets.KUBECONFIG }}'
 
       - name: Test with Maven
