--- a/.github/workflows/build-push-deploy.yml
+++ b/.github/workflows/build-push-deploy.yml
@@ -72,7 +72,12 @@ jobs:
           export NODE_PORT=$(kubectl --kubeconfig=kubeconfig get --namespace mycv-test -o jsonpath="{.spec.ports[0].nodePort}" services mycv)
           export NODE_PORT_JACOCO=$(kubectl --kubeconfig=kubeconfig get --namespace mycv-test -o jsonpath="{.spec.ports[1].nodePort}" services mycv)
           mvn -B verify -DBASE_URI=http://$NODE_IP:$NODE_PORT -Djacoco.address=$NODE_IP -Djacoco.port=$NODE_PORT_JACOCO --file pom.xml
-          mvn -B sonar:sonar -Dsonar.login="${{ secrets.SONARCLOUD }}"
+
+      - name: Test with Maven
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          SONAR_TOKEN: ${{ secrets.SONARCLOUD }}
+        run: mvn -B sonar:sonar
 
       - name: Deploy to Prod Namespace Kubernetes
         uses: WyriHaximus/github-action-helm3@v1.0.0
